defining tabs and adding bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,296 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{suarez2017netflow,
+  title={A NetFlow/IPFIX implementation with OpenFlow},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere and Carela-Espanol, Valent{\i}n},
+  booktitle={TERENA Networking Conference, 2017},
+  year={2017}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@inproceedings{suarez2017towards,
+  title={Towards a NetFlow implementation for OpenFlow Software-Defined Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={29th International Teletraffic Congress (ITC), 2017},
+  volume={1},
+  pages={187--195},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{suarez2018flow,
+  title={Flow monitoring in Software-Defined Networks: Finding the accuracy/performance tradeoffs},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  journal={Computer Networks},
+  volume={135},
+  pages={289--301},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@inproceedings{suarez2018sbar,
+  title={SBAR: SDN flow-Based monitoring and Application Recognition},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={Proceedings of the Symposium on SDN Research (SOSR)},
+  year={2018},
+  organization={ACM}
+}
+
+@inproceedings{suarez2018towards,
+  title={Towards accurate classification of HTTPS traffic in Software-Defined Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={International Instrumentation and Measurement Technology Conference (I2MTC)},
+  year={2018}
+}
+
+@inproceedings{rusek2019unveiling,
+  title={Unveiling the potential of Graph Neural Networks for network modeling and optimization in SDN},
+  author={Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Proceedings of the ACM Symposium on SDN Research (SOSR)},
+  pages={140--151},
+  year={2019}
+}
+
+@inproceedings{suarez2019feature,
+  title={Feature engineering for Deep Reinforcement Learning based routing},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE International Conference on Communications (ICC)},
+  year={2019}
+}
+
+@inproceedings{zayuelas2019detecting,
+  title={Detecting cryptocurrency miners with NetFlow/IPFIX network measurements},
+  author={Zayuelas i Mu{\~n}oz, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={IEEE International Symposium on Measurements and Networking (M\&N)},
+  year={2019}
+}
+
+@inproceedings{suarez2019challenging,
+  title={Challenging the generalization capabilities of Graph Neural Networks for network modeling},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Carol-Bosch, Sergi and Rusek, Krzysztof and Almasan, Paul and Arias, Marta and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Proceedings of ACM SIGCOMM Posters and Demos},
+  pages={114--115},
+  year={2019},
+  organization={ACM}
+}
+
+@article{suarez2019routing,
+  title={Routing in optical transport networks with deep reinforcement learning},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={Journal of Optical Communications and Networking},
+  volume={11},
+  pages={547--558},
+  year={2019},
+  publisher={IEEE/OSA}
+}
+
+@article{rusek2020routenet,
+  title={RouteNet: Leveraging Graph Neural Networks for network modeling and optimization in SDN},
+  author={Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={IEEE Journal on Selected Areas in Communications (JSAC)},
+  year={2020}
+}
+
+@inproceedings{badia2019towards,
+  title={Towards more realistic network models based on Graph Neural Networks},
+  author={Badia-Sampera, Arnau and Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Rusek, Krzysztof and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Proceedings of ACM CoNEXT student workshop},
+  pages={14--16},
+  year={2019},
+  organization={ACM}
+}
+
+@article{almasan2022deep,
+  title={Deep Reinforcement Learning meets Graph Neural Networks: exploring a routing optimization use case},
+  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Badia-Sampera, Arnau and Rusek, Krzysztof and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={Computer Communications},
+  year={2022}
+}
+
+@inproceedings{pujol2021netxplain,
+  title={NetXplain: Real-time explainability of Graph Neural Networks applied to Computer Networks},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={MLSys workshop on Graph Neural Networks and Systems (GNNSys)},
+  year={2021}
+}
+
+@inproceedings{almasan2021towards,
+  title={Towards Real-Time Routing Optimization with Deep Reinforcement Learning: Open Challenges},
+  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Wu, Bo and Xiao, Shihan and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE HPSR SARNET},
+  year={2021}
+}
+
+@inproceedings{suarez2019routing,
+  title={Routing Based on Deep Reinforcement Learning in Optical Transport Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Optical Fiber Communications Conference and Exhibition (OFC), San Diego, USA},
+  year={2019}
+}
+
+@article{suarez2021graph,
+  title={The Graph Neural Networking Challenge: A Worldwide Competition for Education in AI/ML for Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and L{\'o}pez, Albert and Almasan, Paul and Bern{\'a}rdez, Guillermo and Pujol-Perich, David and Rusek, Krzysztof and Bonniot, Lo{\"\i}ck and Neumann, Christoph and Schnitzler, Fran{\c{c}}ois and others},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={51},
+  number={3},
+  year={2021}
+}
+
+@inproceedings{pujol2021unveiling,
+  title={Unveiling the potential of Graph Neural Networks for robust Intrusion Detection},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={Workshop on AI in Networks and Distributed Systems},
+  year={2021}
+}
+
+@incollection{pujol2021ignnition,
+  title={IGNNITION: fast prototyping of graph neural networks for communication networks},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and Wu, Bo and Xiao, Shihan and Cheng, Xiangle and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={Proceedings of ACM SIGCOMM Poster and Demo Sessions},
+  pages={71--73},
+  year={2021}
+}
+
+@inproceedings{pujol2021ignnition,
+  title={IGNNITION: A framework for fast prototyping of Graph Neural Networks},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={MLSys workshop on Graph Neural Networks and Systems (GNNSys)},
+  year={2021}
+}
+
+@article{pujol2021netxplain,
+  title={NetXplain: Real-time Explainability of Graph Neural Networks applied to Networking},
+  author={Pujol-Perich, David and Suárez-Varela, Jos{\'e} and Xiao, Shihan and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={ITU Journal on Future and Evolving Technologies (ITU J-FET)},
+  volume={2},
+  number={4},
+  year={2021}
+}
+
+@inproceedings{bernardez2021machine,
+  title={Is Machine Learning Ready for Traffic Engineering Optimization?},
+  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and L{\'o}pez, Albert and Wu, Bo and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE International Conference on Network Protocols (ICNP)},
+  year={2021}
+}
+
+@article{careglio2021results,
+  title={Results and Achievements of the ALLIANCE Project: New Network Solutions for 5G and Beyond},
+  author={Careglio, Davide and Spadaro, Salvatore and Cabellos, Albert and Lazaro, Jose Antonio and Barlet-Ros, Pere and Gen{\'e}, Joan Manel and Perell{\'o}, Jordi and Agraz Bujan, Fernando and Su{\'a}rez-Varela, Jos{\'e} and Pages, Albert and others},
+  journal={Applied Sciences},
+  volume={11},
+  number={19},
+  pages={9130},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{ferriol2022building,
+  title={Building a Digital Twin for Network Optimization Using Graph Neural Networks},
+  author={Ferriol-Galm{\'e}s, Miquel and Su{\'a}rez-Varela, Jos{\'e} and Paillise, Jordi and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={Computer Networks},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{suarez2022graph,
+  title={Graph Neural Networks for Communication Networks: Context, Use Cases and Opportunities},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Ferriol-Galm{\'e}s, Miquel and Rusek, Krzysztof and Geyer, Fabien and Cheng, Xiangle and Shi, Xiang and Xiao, Shihan and Scarselli, Franco and Cabellos-Aparicio, Albert and others},
+  journal={IEEE Network},
+  year={2022}
+}
+
+@inproceedings{ferriol2022routenet,
+  title={RouteNet-Erlang: A Graph Neural Network for Network Performance Evaluation},
+  author={Ferriol-Galm{\'e}s, Miquel and Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Xiao, Shihan and Shi, Xiang and Cheng, Xiangle and Wu, Bo and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE INFOCOM - IEEE International Conference on Computer Communications},
+  year={2022}
+}
+
+@article{pujol2021ignnition,
+  title={IGNNITION: Bridging the Gap between Graph Neural Networks and Networking Systems},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol, Miquel and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={IEEE Network},
+  volume={35},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  pages={171--177},
+  year={2021},
+  publisher={IEEE}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{almasan2022network,
+  title={Network Digital Twin: Context, Enabling Technologies and Opportunities},
+  author={Almasan, Paul and Ferriol-Galm{\'e}s, Miquel and Paillisse, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Perino, Diego and L{\'o}pez, Diego and Perales, Antonio Agustin Pastor and Harvey, Paul and Ciavaglia, Laurent and Wong, Leon and others},
+  journal={IEEE Communications Magazine},
+  year={2022}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{pujol2022unveiling,
+  title={Unveiling the potential of graph neural networks for robust intrusion detection},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={ACM SIGMETRICS Performance Evaluation Review},
+  volume={49},
+  number={4},
+  pages={111--117},
+  year={2022},
+  publisher={ACM New York, NY, USA}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{happ2022exploring,
+  title={Exploring the Limitations of Current Graph Neural Networks for Network Modeling},
+  author={Happ, Martin and Du, Jia Lei and Herlich, Matthias and Maier, Christian and Dorfinger, Peter and Su{\'a}rez-Varela, Jos{\'e}},
+  booktitle={IEEE/IFIP Network Operations and Management Symposium (NOMS)},
+  pages={1--8},
+  year={2022},
+  organization={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{rusek2022fast,
+  title={Fast Traffic Engineering by Gradient Descent with Learned Differentiable Routing},
+  author={Rusek, Krzysztof and Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Cho{\l}da, Piotr and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={International Conference on Network and Service Management (CNSM)},
+  year={2022}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{ferriol2023routenet,
+  title={RouteNet-Fermi: Network Modeling with Graph Neural Networks},
+  author={Ferriol-Galm{\'e}s, Miquel and Paillisse, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Rusek, Krzysztof and Xiao, Shihan and Shi, Xiang and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={IEEE/ACM Transactions on Networking},
+  year={2023}
+}
+
+@article{bernardez2023magnneto,
+  title={MAGNNETO: A Graph Neural Network-Based Multi-Agent System for Traffic Engineering},
+  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and L{\'o}pez, Albert and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={IEEE Transactions on Cognitive Communications and Networking},
+  volume={9},
+  number={2},
+  pages={494--506},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{bernardez2023graphcc,
+  title={GraphCC: A Practical Graph Learning-based Approach to Congestion Control in Datacenters},
+  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={arXiv preprint arXiv:2308.04905},
+  year={2023}
+}
+
+@inproceedings{almasan2023enhancing,
+  title={Enhancing 5G Radio Planning with Graph Representations and Deep Learning},
+  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Lutu, Andra and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={Proceedings of the ACM SIGCOMM 5G-MeMU workshop},
+  year={2023}
+}
+
+@inproceedings{latif2023detecting,
+  title={Detecting Contextual Network Anomalies with Graph Neural Networks},
+  author={Latif, Hamid and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={Proceedings of the ACM CoNEXT Graph Neural Networking Workshop},
+  pages={25--30},
+  year={2023},
+  html={https://arxiv.org/pdf/2312.06342.pdf},
+  bibtex_show={true}
 }
