--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -257,7 +257,11 @@
   title={RouteNet-Fermi: Network Modeling with Graph Neural Networks},
   author={Ferriol-Galm{\'e}s, Miquel and Paillisse, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Rusek, Krzysztof and Xiao, Shihan and Shi, Xiang and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
   journal={IEEE/ACM Transactions on Networking},
-  year={2023}
+  year={2023},
+  month={may},
+  website={https://doi.org/10.1109/TNET.2023.3269983},
+  pdf={https://arxiv.org/pdf/2212.12070},
+  bibtex_show={true}
 }
 
 @article{bernardez2023magnneto,
@@ -268,21 +272,31 @@
   number={2},
   pages={494--506},
   year={2023},
-  publisher={IEEE}
+  month={jan},
+  website={https://doi.org/10.1109/TCCN.2023.3235719},
+  pdf={https://arxiv.org/pdf/2303.18157},
+  bibtex_show={true}
 }
 
 @article{bernardez2023graphcc,
   title={GraphCC: A Practical Graph Learning-based Approach to Congestion Control in Datacenters},
   author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
   journal={arXiv preprint arXiv:2308.04905},
-  year={2023}
+  year={2023},
+  month={aug},
+  pdf={https://arxiv.org/pdf/2308.04905},
+  bibtex_show={true}
 }
 
 @inproceedings{almasan2023enhancing,
   title={Enhancing 5G Radio Planning with Graph Representations and Deep Learning},
   author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Lutu, Andra and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
   booktitle={Proceedings of the ACM SIGCOMM 5G-MeMU workshop},
-  year={2023}
+  year={2023},
+  month={nov},
+  website={https://doi.org/10.1145/3609382.3610509},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3609382.3610509?casa_token=dvJRjMEpnRwAAAAA:x4CHLrJjSjdVyoQiH-biJKpvoURyp4KA0deXHcXs6-BUa0CPPr3h2LJG0b9xCE-lGUoeGBu38jj_},
+  bibtex_show={true}
 }
 
 @inproceedings{latif2023detecting,
@@ -291,6 +305,8 @@
   booktitle={Proceedings of the ACM CoNEXT Graph Neural Networking Workshop},
   pages={25--30},
   year={2023},
-  html={https://arxiv.org/pdf/2312.06342.pdf},
+  month={dec},
+  website={https://doi.org/10.1145/3630049.3630171},
+  pdf={https://arxiv.org/pdf/2312.06342.pdf},
   bibtex_show={true}
 }
